# ACMPC-solvers

./: .gitignore  .gitmodules  README.md  __init__.py  acados_sqp_solver.py  casadi_collocation_solver.py  mpc_problem.py  pyproject.toml  requirements.txt
acmpc_solvers/: __init__.py  acados_sqp_solver.py  casadi_collocation_solver.py  mpc_problem.py
